@@ -1,5 +1,8 @@
 Release Note
 
+* 1/9/2015
+  * changed CF to automatically set num_records for seq_number
+
 * 1/5/2015
   * fixed sufficient file check in CF for multiple input streams
 
